fixed overflow issue on 'create a den'

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -441,8 +441,10 @@ TOPICS COMPONENT
       // align-items: center;
 
       #communityGridContainer {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+        // display: grid;
+        // grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+        display: flex;
+        flex-direction: column;
         gap: 1rem;
 
         .topicSelectionBtn {
